# ws63

./: .gitignore  AGENTS.md  BUILDING.md  Git优化与改进建议报告.md  R-C.nc  tanjin.nc  zhihui_xingshan_report_2_3_comprehensive_v2.txt
MSP3223/docs/schematic/: 3.2inch_QD3222_18P_0.8mm.PcbLib  QD3222_18P.SCHLIB
MSP3223/init/: ILI9341V_Init.txt  网页参考.txt
configs/: ws63_rx_unified_defconfig  ws63_screen_panel_defconfig  ws63_tx_defconfig
dependencies/: hispark_sdk_1.10.106.sha256
docs/: WS63激光打标项目进度与展示方案.md
docs/soft_copyright/: WS63激光打标控制软件用户手册_V1.0.docx  build_user_manual.py
scripts/: build_all_variants.sh  build_rx_unified_firmware.sh  build_screen_firmware.sh  build_sd_card_test_firmware.sh  build_sle_job_firmwares.sh  build_variant.sh  restore_official_sdk_libs.sh  sync_host_to_win.sh  verify_dependencies.sh
src/: .gitignore  WS63_Project_Summary_Report.md  compile_commands.json  defconfig
src/4.0inch_SPI/2-Specification/: ST7796_Init.txt
src/4.0inch_SPI/4-Driver_IC_Data_Sheet/: FT6336U_Register.xlsx
src/application/samples/: CMakeLists.txt  Kconfig
src/application/samples/User/: CMakeLists.txt  Kconfig
src/application/samples/User/button/: CMakeLists.txt  Kconfig  button_demo.c
src/application/samples/User/led/: CMakeLists.txt  Kconfig  led_example.c
src/application/samples/User/pwm/: CMakeLists.txt  Kconfig  pwm_demo.c
src/application/samples/User/usart/: CMakeLists.txt  Kconfig  usart_demo.c
src/application/samples/peripheral/pwm/: pwm_demo.c
src/deprecated/: README.md
src/deprecated/ws63_laser_sle_bridge/: CMakeLists.txt  README.md
src/deprecated/ws63_laser_sle_job_host/: README.md
src/deprecated/ws63_laser_wifi/: Kconfig  README.md
src/deprecated/ws63_laser_wireless/: README.md
src/deprecated/ws63_screen_lvgl/: CMakeLists.txt  Kconfig  README.md  lv_conf.h  main.c
src/deprecated/ws63_screen_panel_lvgl/: lv_conf.h
src/deprecated/ws63_screen_st7796_ft6336/: Kconfig  README.md
src/deprecated/ws63_sd_card_test/: CMakeLists.txt
src/deprecated/ws63_sle_laser/: CMakeLists.txt  README.md
src/deprecated/ws63_test/: AI_STUDIO_UI_DESIGN_REQUIREMENTS.md  Kconfig  PROJECT_CAPABILITY_FEASIBILITY_PLAN.md  PROJECT_COMPETITION_UPGRADE_PLAN.md  README.md  WS63_DEBUG_QUICKSTART.md
src/ws63_laser_host_app/: README.md
src/ws63_laser_host_ui/: .gitignore  README.md  THIRD_PARTY_NOTICES.md  WS63_Laser_Host.spec  build_windows.bat  build_windows.ps1  main.py  mockup.html  requirements-build.txt  requirements.txt
src/ws63_laser_host_ui/app/: __init__.py  config_store.py  doubao_image_service.py  event_bus.py  gcode_preview.py  gcode_transform.py  gcode_validator.py  image_crop.py  image_gcode.py  paths.py  self_test.py  state_models.py
src/ws63_laser_host_ui/assets/: windows_version_info.txt
src/ws63_laser_host_ui/docs/: LASERGRBL_ALIGNMENT.md
src/ws63_laser_host_ui/tests/: test_app_paths.py  test_build_contract.py  test_doubao_image_service.py  test_doubao_image_worker.py  test_gcode_preview.py  test_gcode_transform.py  test_gcode_validator.py  test_image_crop.py  test_image_gcode.py  test_status_parsing.py  test_ui_contract.py
src/ws63_laser_host_ui/tools/: build_icon.py
src/ws63_laser_host_ui/transports/: serial_transport.py  sle_tx_transport.py  wifi_tcp_transport.py
src/ws63_laser_host_ui/ui/: main_window.py
src/ws63_laser_host_ui/workers/: __init__.py  doubao_image_worker.py  serial_worker.py
src/ws63_laser_rx_unified/: CMakeLists.txt  Kconfig  README.md  main.c
src/ws63_laser_rx_unified/common/: config.h  route_types.h  rx_motion_protocol.h  rx_types.h
src/ws63_laser_rx_unified/diagnostics/: diag_log.c  diag_log.h
src/ws63_laser_rx_unified/executor/: gcode_parser.c  gcode_parser.h  gcode_processor.h  motion_executor.c  motion_executor.h
src/ws63_laser_rx_unified/hardware/: dac8562.c  dac8563.c  dac8563.h  laser_ctrl.c
src/ws63_laser_rx_unified/mode_select/: boot_policy.c  boot_policy.h  route_manager.c  route_manager.h  route_status.c  route_status.h
src/ws63_laser_rx_unified/routes/: README.md
src/ws63_laser_rx_unified/rx_core/: rx_core.c  rx_core.h  rx_mode.c  rx_mode.h  rx_status.c  rx_status.h  rx_stream.c  rx_stream.h
src/ws63_laser_rx_unified/safety/: safety.c  safety.h
src/ws63_laser_rx_unified/shared_safety/: README.md
src/ws63_laser_rx_unified/transports/: uart_transport.c  uart_transport.h
src/ws63_laser_single/: Kconfig  README.md
src/ws63_laser_single/common/: config.h
src/ws63_laser_single/src/: CMakeLists.txt  dac8562.c  dac8562.h  gcode_processor.c  gcode_processor.h  laser_ctrl.c  laser_ctrl.h  main.c  motion_executor.c  motion_executor.h  uart_handler.c  uart_handler.h
src/ws63_laser_sle_bridge/: Kconfig
src/ws63_laser_sle_bridge/common/: config.h
src/ws63_laser_sle_bridge/receiver/: CMakeLists.txt  bridge_rx_stats.h  gcode_processor.c  main.c  motion_executor.c  sle_receiver.c  sle_receiver.h  stream_io.c  stream_io.h
src/ws63_laser_sle_bridge/transmitter/: main.c  sle_passthrough.c  sle_passthrough.h
src/ws63_laser_sle_job/: CMakeLists.txt  Kconfig  README.md  调试任务书.md
src/ws63_laser_sle_job/common/: config.h  crc16.c  crc16.h  packet.c  protocol.h
src/ws63_laser_sle_job_host/: README.md  main.py
src/ws63_laser_sle_tx/: CMakeLists.txt  Kconfig
src/ws63_laser_wifi/: CMakeLists.txt  Kconfig  README.md
src/ws63_laser_wireless/: CMakeLists.txt  Kconfig  README.md
src/ws63_screen_lvgl/: CMakeLists.txt  Kconfig  README.md  lv_conf.h  main.c
src/ws63_screen_panel_lvgl/: CMakeLists.txt  Kconfig  lv_conf.h  main.c
src/ws63_screen_panel_lvgl_refactor/: CMakeLists.txt  README.md
src/ws63_screen_st7796_ft6336/: CMakeLists.txt  README.md  main.c  porting_notes.md
src/ws63_sle_laser/: CMakeLists.txt  Kconfig  README.md
src/ws63_test/: CMakeLists.txt  CODE_ARCHITECTURE.md  COMPETITION_SPRINT_PLAN.md  Kconfig  PROJECT_PROGRESS_HANDOFF_REPORT.md  README.md  WIFI_IMPLEMENTATION_GUIDE.md  WS63_DEBUG_QUICKSTART.md  WS63_PROJECT_KNOWLEDGE_REPORT.md
src/ws63_try/: $RP6HUVZ.resolved  new_arduino_laser.lbdev
src/ws63_wenxuan/: CMakeLists.txt  Kconfig  README.md  main.c
(+5036 files in other folders)
